# sim-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: DEVELOPMENT.md  README.de.md  README.ja.md  README.zh.md  agent-readability.md  plugin-install.md
docs/architecture/: multi-session-and-config.md  skills-layering-plan.md  version-compat.md
src/sim/: __init__.py  __main__.py  _plugin_install.py  _timeout.py  cli.py  compat.py  config.py  driver.py  history.py  inspect.py  runner.py  server.py  session.py
src/sim/drivers/: __init__.py
src/sim/gui/: __init__.py  _pywinauto_tools.py  _win32_dialog.py
tests/: conftest.py
tests/base/: test_cli.py  test_compat.py  test_config.py  test_connect.py  test_driver_discovery.py  test_history.py  test_lint.py  test_logs.py  test_multi_session.py  test_plugin_install.py  test_plugins.py  test_protocol_conformance.py  test_run.py
tests/drivers/calculix/: test_calculix_driver.py  test_calculix_e2e.py
tests/drivers/coolprop/: test_coolprop_driver.py  test_coolprop_e2e.py
tests/drivers/devito/: test_devito_driver.py  test_devito_e2e.py
tests/drivers/elmer/: test_elmer_driver.py  test_elmer_e2e.py
tests/drivers/fipy/: test_fipy_driver.py  test_fipy_e2e.py
tests/drivers/gmsh/: test_gmsh_driver.py  test_gmsh_e2e.py
tests/drivers/isaac/: test_isaac_driver.py  test_isaac_e2e.py
tests/drivers/lammps/: test_lammps_driver.py  test_lammps_e2e.py
tests/execution/: calculix_e2e_cantilever_run.py  elmer_e2e_heat_square.py  gmsh_e2e_sphere_mesh.py  lammps_e2e_lj_nvt.py  meshio_e2e_gmsh_to_vtk.py  pymfem_e2e_poisson.py  pyvista_e2e_sphere_stats.py  scikit_fem_e2e_poisson.py  su2_e2e_inviscid_bump.py
tests/fixtures/: calculix_good.inp  calculix_no_keyword.inp  calculix_no_step.inp  coolprop_good.py  coolprop_no_import.py  coolprop_no_usage.py  coolprop_syntax_error.py  devito_good.py  devito_no_usage.py  devito_syntax_error.py  elmer_good.sif  elmer_no_simulation.sif  elmer_no_solver.sif  elmer_not_sif.sif  fipy_good.py  fipy_no_usage.py  fipy_syntax_error.py  gmsh_good.geo  gmsh_good.py  gmsh_no_geom.geo  gmsh_py_no_import.py  gmsh_syntax_error.geo  hypermesh_good.py  hypermesh_gui.py  hypermesh_no_import.py  hypermesh_no_usage.py  hypermesh_syntax_error.py  lammps_good.in  lammps_no_run.in  lammps_no_units.in  lammps_not_input.in  ltspice_good.net  ltspice_no_analysis.net  ltspice_schematic.net  meshio_good.py  meshio_no_import.py  meshio_no_io.py  meshio_syntax_error.py  mfem_good.py  mfem_no_import.py  (+49 more)
tests/gui/: test_connect_tools_field.py  test_gui_facade.py
tests/inspect/: _extract_comsol_Tmax.py  test_channel_3_4_5_9.py  test_gui_probes.py  test_inspect_types.py  test_probes.py  test_snippet_timeout.py
tools/: extract_driver.py
(+143 files in other folders)
