[project]
name = "sim-runtime"
version = "0.2.4"
description = "Make every engineering tool agent-native — a CLI runtime that lets LLM agents launch, drive, and observe CAD/CAE software"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
keywords = [
    "simulation", "cae", "cad", "cfd", "fea",
    "llm", "agent", "agentic",
    "openfoam", "ltspice", "pybamm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# sim-cli runs every solver in its own process; vendor SDKs (when needed)
# are installed alongside sim-cli into the same env, either as part of the
# corresponding plugin's install, or directly by the user. compat.yaml
# documents which combinations are supported.
dependencies = [
    "click>=8.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0", # reads driver compatibility.yaml files
    "Pillow>=10", # sim screenshot endpoint uses PIL.ImageGrab
    "lxml>=5.0", # XSD validation for FloSCRIPT lint
    "sim-ltspice>=0.2.2", # LTspice file formats + runtime — sim-cli's LTspice driver delegates here. >=0.2.2 for run_asc.
    "tomli>=2.0; python_version<'3.11'", # TOML parser for config.py; stdlib tomllib is 3.11+
    "pywinauto>=0.6.8; sys_platform == 'win32'", # GUI automation backend for solvers driven through their UI rather than a batch API. Spawned in a subprocess via sys.executable, so must live in the same venv as sim-server.
]

[project.optional-dependencies]
pybamm  = ["pybamm>=24.0"]
dev     = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage      = "https://github.com/svd-ai-lab/sim-cli"
Repository    = "https://github.com/svd-ai-lab/sim-cli"
Issues        = "https://github.com/svd-ai-lab/sim-cli/issues"
Documentation = "https://github.com/svd-ai-lab/sim-cli#readme"
Changelog     = "https://github.com/svd-ai-lab/sim-cli/blob/main/CHANGELOG.md"

[project.scripts]
sim = "sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires solver packages installed"]

[tool.ruff]
target-version = "py310"
